--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Number Facts</string>
+    <string name="next">NEXT</string>
+    <string name="finish">FINISH</string>
+    <string name="back">BACK</string>
 </resources>
